# churn_prediction

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: main.yml
data/: corpus.dvc
models/: classes.json.dvc  language_detector.onnx.dvc
scripts/: README.md  __init__.py  generate_corpus_data.py  lab_check.bat  lab_docker_up.bat  lab_dvc_checkout_corpus.bat  lab_dvc_pull_corpus.bat  lab_dvc_push_corpus.bat  lab_dvc_status.bat  lab_ensure_corpus.bat  lab_generate_corpus.bat  lab_git_log_corpus_dvc.bat  lab_run_tests.bat  lab_verify.bat  lab_verify.py  quality_gate.py  train_model.py
src/: __init__.py
src/application/: data_sync_service.py  services.py
src/domain/: entities.py  interfaces.py
src/infrastructure/: churn_model.py  language_detector.py  onnx_model.py  s3_storage.py  storage_settings.py
src/presentation/: api.py  celery_app.py  cli.py  dependencies.py  factories.py  sync_cli.py  tasks.py
tests/: test_api.py  test_churn_analysis_service.py  test_corpus_data.py  test_data_sync_service.py  test_dependencies.py  test_factories_storage.py  test_factory_and_cli.py  test_idata_storage.py  test_imodel_interface.py  test_inference_service.py  test_language_detector.py  test_language_model_sync_factory.py  test_language_versioning.py  test_mock_churn_model.py  test_onnx_model.py  test_s3_storage.py  test_storage_settings.py  test_sync_cli.py  test_tasks.py
