[project]
name = "churn-prediction"
version = "0.1.0"
description = "Churn Prediction skeleton (Clean Architecture, mock ML)"
authors = [
    {name = "kris",email = "klebedeva14052003@gmail.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "boto3>=1.34.0",
    "dvc[s3]>=3.0.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.27.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.17.0",
    "skl2onnx>=1.16.0",
    "pydantic>=2.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "python-dotenv>=1.0.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "mlflow>=2.22.0",
    "protobuf>=3.20.3,<4.0.0",
]

[tool.poetry]
packages = [{ include = "src" }]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
